        -> type error
    35- setrand(43);nfbasis(x^12-4*x^11-1948*x^10+23072*x^9+1377243*x^8-28119512*x^7-305497980*x^6+12643497432*x^5-64374713540*x^4-1604497782672*x^3+26693470513376*x^2-159320374579040*x+352544728838416) -> SEGV [#2178]
    36- missing type checks in lfunthetacheckinit [#2179]
    37- idealispower(x,n,&y): y could be incorrect [#2181]
    38- SEGV in idealispower [#2183]

  Changed
     1- [libpari] rename rootsof1 -> nfrootsof1
     2- [libpari] rename isirreducible -> polisirreducible
     3- hyperellpadicfrobenius: allow X defined over a number field and
        compute Frobenius over unramified extension of Q_p
     4- matsnf(integral matrix): use modular algorithm
     5- rnf structure now contains the list of relative ramified primes
     6- use the documented semantic for Euclidean division involving real t_QUAD
        e.g. x % y is x - floor(x/y)*y; for a t_QUAD x and t_INT y, we used
        to mod out y in "real" and "imaginary" part independently.
     7- [libpari] rename rootpadic -> polrootspadic
     8- polrootspadic: allow computing roots in unramified extension of Q_p
     9- definition of lfunhardy for non-self-dual functions: remove
        rootnumber, which is not well defined since it depends on the choice
        of dual sequence a^*(n)
    10- improved RgXn_powu / RgXn_powu_i for large valuations
    11- improved ZM_ker for wide rectangular matrices
    12- lfun(t_INT D): allow arbitrary non-0 D encoding the attached
        primitive character coredisc(D) (as for other character formats)
    13- exp(small rational number): use binary splitting
    14- parsum: removed optional argument [allows grouping of subsums => faster]
BA  15- old gen_ZpM_Dixon renamed to gen_ZpM_Dixon_Wiedemann,
        new gen_ZpM_Dixon with simpler interface
    16- better formula for Catalan
BA  17- QXQ_div_ratlift renamed to QXQ_div
    18- disallow mfeisenstein(k,chi1,chi2) when Q(chi1 chi2) is not its field
        of definition