@@ -12,18 +12,51 @@ Mod(0, 3)
 Mod(2, 3)
 Mod(0, 3)
 
-[Mod(0, 3)         0]
+[Mod(0, 3) Mod(0, 3)]
 
-[        0 Mod(0, 3)]
+[Mod(0, 3) Mod(0, 3)]
 
 Mod(1, 3)
 
-[1 0]
+[Mod(1, 3) Mod(0, 3)]
 
-[0 1]
+[Mod(0, 3) Mod(1, 3)]
+
+
+[Mod(1, 3)*y + Mod(1, 3)               Mod(0, 3)]
+
+[              Mod(0, 3) Mod(1, 3)*y + Mod(1, 3)]
+
+
+[Mod(1, 3) + Mod(1, 3)*y + O(y^2)                        Mod(0, 3)]
+
+[                       Mod(0, 3) Mod(1, 3) + Mod(1, 3)*y + O(y^2)]
+
+
+[Mod(1, 3) Mod(0, 3)]
+
+[Mod(0, 3) Mod(1, 3)]
+
+
+[Mod(0, 3) Mod(0, 3)]
+
+[Mod(0, 3) Mod(0, 3)]
+
+
+[Mod(0, 3)]
+
+
+[Mod(1, 3)]
+
+
+[Mod(1, 3)]
+
+
+[Mod(0, 3)]
 
 "t_POL"
 "t_INT"
+"t_POL"
 "t_POL"
 [3, 4]
 [3, 4]~
@@ -47,4 +80,4 @@ x + O(x^2)
 (y + 1) + (y + 1)*x + O(x^2)
 Mod(1, y)/(Mod(1, y)*x)
 Mod(-a, a^2 - 2)
-Total time spent: 1
+Total time spent: 2
