@@ -1,4 +1,4 @@
-x; y; p; q;
+p; q;
 subst(Y/X,X,x)
 substvec(x+y,[x,y],[1,x])
 
@@ -15,10 +15,19 @@ subst(Pol(0),x,Mod(1,3))
 subst(Pol(0),x,Mod(1,3)*matid(2))
 subst(Pol(1),x,Mod(1,3))
 subst(Pol(1),x,Mod(1,3)*matid(2))
+subst(y+1,x,Mod(1,3)*matid(2))
+subst(1+y+O(y^2),x,Mod(1,3)*matid(2))
+subst(1,x,Mod(1,3)*matid(2))
+subst(0,x,Mod(1,3)*matid(2))
+subst(Pol(0),x,Mat(Mod(1,3)))
+subst(Pol(1),x,Mat(Mod(1,3)))
+subst(1,x,Mat(Mod(1,3)))
+subst(0,x,Mat(Mod(1,3)))
 
 type(subst(Pol(0),'y,1))
 type(subst(Pol(0),'x,1))
 type(subst(Pol(0),'y,Mod(1,3)))
+type(subst('u^0,u,x))
 
 subst(x+1, x, [2,3])
 subst(x+1, x, [2,3]~)
